--- a/src/app/pages/proveedores/proveedor/list/proveedor.component.html
+++ b/src/app/pages/proveedores/proveedor/list/proveedor.component.html
@@ -32,7 +32,7 @@
                 [to]="['/proveedores', r.id, 'editar']" [ariaLabel]="'Editar ' + r.nombre">
             </ui-button>
 
-            <ui-button class="ml-1" [icon]="Banknote" label="Pagar" variant="secondary" size="sm"
+            <ui-button class="ml-1" [icon]="Banknote" label="Pagar" variant="outline" size="sm"
                 [to]="['/pago-proveedor', r.id, 'nuevo']" [ariaLabel]="'Registrar pago a ' + r.nombre">
             </ui-button>
         </ng-template>
